[package]
name = "wuxia-dl"
version = "0.1.0"
authors = ["Jezza <jezzadabomb@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
epub-builder = "0.4.0"
reqwest = "0.9.0"
select = "0.4.2"
regex = "1.0.5"
url = "1.2"
error-chain = "0.12.0"
rayon = "1.0.2"
indicatif = "0.9.0"